<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#B2D9FF" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:id="@+id/MoneyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D8ECFF"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D8ECFF"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/convert_money_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:text="@string/convert_money_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/convert_money_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/convert_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/currency_textWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/left_currency_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="1"
                    android:inputType="numberDecimal"
                    android:text="@string/default_currency_val" />

                <TextView
                    android:id="@+id/right_currency_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="1"
                    android:text="@string/default_currency_val"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/currency_spinner_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/currency_array" />

                <Spinner
                    android:id="@+id/currency_spinner_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/currency_array" />
            </LinearLayout>

            <Button
                android:id="@+id/swap_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/swap_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/DistanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/MoneyLayout"
            android:layout_marginTop="16dp"
            android:background="#D8ECF0"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/convert_distance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:text="@string/convert_distance_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/convert_distance_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/convert_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/left_distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="1"
                    android:inputType="numberDecimal"
                    android:text="@string/default_currency_val" />

                <TextView
                    android:id="@+id/right_distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="1"
                    android:text="@string/default_currency_val"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
				<RadioGroup 
				    android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:orientation="horizontal">
	                <RadioButton
	                    android:id="@+id/km_to_miles_radioButton"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:text="@string/km_to_miles_radioButton" />
	
	                <RadioButton
	                    android:id="@+id/miles_to_km_radioButton"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:text="@string/miles_to_km_radioButton" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/WeightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/DistanceLayout"
            android:layout_marginTop="16dp"
            android:background="#D8ECF0"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/convert_weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:text="@string/convert_weight_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/convert_weight_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/convert_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/left_weight_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="1"
                    android:inputType="numberDecimal"
                    android:text="@string/default_currency_val" />

                <TextView
                    android:id="@+id/right_weight_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="1"
                    android:text="@string/default_currency_val"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
				<RadioGroup 
				    android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:orientation="horizontal">
	                <RadioButton
	                    android:id="@+id/kg_to_lbs_radioButton"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:text="@string/kg_to_lbs_radioButton" />
	
	                <RadioButton
	                    android:id="@+id/lbs_to_kg_radioButton"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:text="@string/lbs_to_kg_radioButton" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        
        
        <LinearLayout
            android:id="@+id/TemperatureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/WeightLayout"
            android:layout_marginTop="16dp"
            android:background="#D8ECF0"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/convert_temperature_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:text="@string/convert_temperature_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/convert_temperature_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/convert_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/left_temperature_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="1"
                    android:inputType="numberDecimal"
                    android:text="@string/default_currency_val" />

                <TextView
                    android:id="@+id/right_temperature_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="1"
                    android:text="@string/default_currency_val"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
				<RadioGroup 
				    android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:orientation="horizontal">
	                <RadioButton
	                    android:id="@+id/c_to_f_radioButton"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:text="@string/c_to_f_radioButton" />
	
	                <RadioButton
	                    android:id="@+id/f_to_c_radioButton"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:text="@string/f_to_c_radioButton" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        
        
    </RelativeLayout>

</ScrollView>